[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-triage"
version = "0.1.0"
description = "Structured failure triage for pytest, with optional LLM verdicts."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Ilya", email = "idkrysanov.qa@gmail.com" }]
keywords = ["pytest", "plugin", "testing", "triage", "llm", "ci"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = ["pytest>=7.0"]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.0",
    "mypy>=1.8",
    "ruff>=0.4",
]
anthropic = ["anthropic>=0.40"]

[project.urls]
Homepage = "https://github.com/IKrysanov/pytest-triage"
Changelog = "https://github.com/IKrysanov/pytest-triage/blob/main/CHANGELOG.md"
Issues = "https://github.com/IKrysanov/pytest-triage/issues"

[project.entry-points.pytest11]
pytest_triage = "pytest_triage.plugin"

[project.entry-points."pytest_triage.providers"]
fake = "pytest_triage.providers.fake:FakeTriageClient"
oauth-fake = "pytest_triage.providers.fake:OAuthFakeClient"
anthropic = "pytest_triage.providers.anthropic:AnthropicClient"

[tool.hatch.build.targets.wheel]
packages = ["src/pytest_triage"]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "PTH", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src", "tests", "conftest.py"]

# The anthropic SDK is an optional extra, not installed in CI; treat it as
# untyped rather than failing the type check when it is absent.
[[tool.mypy.overrides]]
module = ["anthropic", "anthropic.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -m 'not live'"
testpaths = ["tests"]
markers = [
    "live: hits a real provider network endpoint; excluded from the default run",
]

[tool.coverage.run]
source = ["pytest_triage"]
branch = true

[tool.coverage.report]
fail_under = 85
show_missing = true
precision = 1
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
